<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="0,1"
    android:stretchColumns="2">

    <TableRow
        android:id="@+id/addon_choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/addon_pepperoni"
            android:text="@string/addon_pepperoni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0">

        </CheckBox>
        <CheckBox
            android:id="@+id/addon_mushroom"
            android:text="@string/addon_mushroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1">

        </CheckBox>
        <CheckBox
            android:id="@+id/addon_veggies"
            android:text="@string/addon_veggies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2">

        </CheckBox>

    </TableRow>
</TableLayout>