<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/order_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/margin_padding_around">

    </TextView>
    <LinearLayout
        android:id="@+id/order_table"
        android:layout_width="match_parent"
        android:layout_height="@dimen/order_table_height"
        android:layout_alignParentStart="true"
        android:layout_below="@id/order_label"
        android:layout_marginBottom="@dimen/margin_padding_around"
        android:background="?attr/colorSurfaceVariant"
        android:orientation="vertical">

    </LinearLayout>
    <Button
        android:id="@+id/exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_btn"
        android:layout_below="@id/order_table"
        android:layout_alignParentStart="true">

    </Button>
    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_btn"
        android:layout_below="@id/order_table"
        android:layout_alignParentEnd="true">

    </Button>
</RelativeLayout>